tests/negative/neg_pr1162_removed_named_exit.safe
package Neg_PR1162_Removed_Named_Exit

   function Build returns Integer

      loop
         exit Outer;
      return 0;
